# RSSKing/service/ResourceService.ts
@@ -1,4 +1,5 @@
 import { Resource, PrismaClient } from '@prisma/client';
+import { BinaryLike } from 'crypto';
 import { Task } from 'fp-ts/lib/Task';
 import { getPrisma } from './databaseService';
 
@@ -7,13 +8,40 @@ export const createResource = (resource: Resource) => {
     prisma.resource.create({
         data: resource
     })
-    .catch(e => console.log(e))
-    .finally(() => prisma.$disconnect())
+        .catch(e => console.log(e))
+        .finally(() => prisma.$disconnect())
 }
 
-export const getAllResource : Task<Resource[]> = async () => {
+export const getAllResource: Task<Resource[]> = async () => {
     const prisma = getPrisma();
-    return prisma.resource.findMany().finally(()=>{
+    return prisma.resource.findMany().finally(() => {
         prisma.$disconnect();
     });
+}
+
+export const findResource = async (resourcePath: string) => {
+    const prisma = getPrisma();
+    return await prisma.resource
+        .findFirst({
+            where: {
+                resourcePath
+            }
+        }).finally(() => prisma.$disconnect())
+}
+
+export const findResourceMany = async () => {
+    const prisma = getPrisma();
+    return await prisma.resource
+        .findMany().finally(() => prisma.$disconnect())
+}
+
+export const deleteOneResource = async (resourceID: bigint) => {
+    const prisma = getPrisma();
+    prisma.resource
+        .delete({
+            where: {
+                resourceID: resourceID
+            }
+        })
+        .finally(() => prisma.$disconnect())
 }
