# RSSKing/src/shared/protocols/PtlDeleteResource.ts
@@ -1,0 +1,7 @@
+export interface ReqDeleteResource {
+    userID: string,
+    targetResourceID: string
+}
+
+export interface ResDeleteResource {
+}
