# RSSKing/src/shared/protocols/PtlShowAllResource.ts
@@ -1,0 +1,12 @@
+export interface ReqShowAllResource {
+    userID: string,
+}
+
+export interface ResShowAllResource {
+    data: Resource[]
+}
+
+type Resource = {
+    resourceID: bigint,
+    resourcePath:string
+}
